--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-items-carousel": "^2.6.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
